[package]
name = "trending"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mongodb = { version = "2.0.1", default-features = false, features = ["tokio-runtime"]}